<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="?cardBackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/air_baseline">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/air_title_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?android:textColorSecondary" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/air_optionUseAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/air_baseline"
                android:checked="true"
                android:paddingEnd="0dp"
                android:paddingLeft="@dimen/air_radio_button_padding_start"
                android:paddingRight="0dp"
                android:paddingStart="@dimen/air_radio_button_padding_start"
                android:text="@string/air_label_use_account" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/air_layoutLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ael_expanded="true"
                app:ael_interpolator="fastOutSlowIn"
                app:ael_orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/air_baseline_half">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/air_inputUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/air_label_username"
                            android:inputType="textNoSuggestions"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/air_baseline_half">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/air_inputPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/air_label_password"
                            android:imeOptions="actionSend"
                            android:inputType="textPassword" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            <RadioButton
                android:id="@+id/air_optionAnonymous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/air_baseline"
                android:paddingEnd="0dp"
                android:paddingLeft="@dimen/air_radio_button_padding_start"
                android:paddingRight="0dp"
                android:paddingStart="@dimen/air_radio_button_padding_start"
                android:text="@string/air_label_use_guest" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/air_layoutGuest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ael_expanded="false"
                app:ael_interpolator="fastOutSlowIn"
                app:ael_orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/air_inputEmailParent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/air_baseline_half">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/air_inputEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/air_label_email_optional"
                            android:inputType="textEmailAddress"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
        </RadioGroup>

    </LinearLayout>

</android.support.v7.widget.CardView>
