<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="?cardBackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/air_baseline">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/air_title_issue"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?android:textColorSecondary"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/air_baseline">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/air_inputTitle"
                android:singleLine="true"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/air_label_issue_title"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/air_baseline_half">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/air_inputDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="@string/air_label_issue_description"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/air_baseline">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/air_label_device_info"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <ImageButton
                android:id="@+id/air_buttonDeviceInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/air_icon_padding"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/air_ic_expand_more"
                android:contentDescription="@string/air_label_device_info"/>

        </LinearLayout>

        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/air_layoutDeviceInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ael_expanded="false"
            app:ael_interpolator="fastOutSlowIn"
            app:ael_orientation="vertical">

            <TextView
                android:id="@+id/air_textDeviceInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/air_baseline_half"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:textColorSecondary"/>

        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>